# iwallet

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
accounts/: admin.py  exceptions.py  middleware.py  models.py  services.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_show_converted.py
accounts/tests/: test_middleware.py  test_onboarding.py  test_services.py
categories/: admin.py  exceptions.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
categories/fixtures/: preset_categories.json
categories/migrations/: 0001_initial.py  0002_seed_presets.py  0003_categoryhide.py
categories/tests/: factories.py  test_models.py  test_picker.py  test_selectors.py  test_services.py  test_views.py
core/: urls.py  views.py
core/templates/: base.html
core/templatetags/: core_extras.py
core/tests/: test_database.py  test_deploy_config.py  test_home.py  test_settings.py  test_settings_hub.py  test_tailwind.py  test_templates.py
currencies/: admin.py  cbu_client.py  constants.py  exceptions.py  models.py  selectors.py  services.py  urls.py  views.py
currencies/migrations/: 0001_initial.py
currencies/tests/: factories.py  test_aggregated_summary.py  test_cbu_client.py  test_constants.py  test_home_integration.py  test_management_fetch_rates.py  test_models.py  test_services_convert.py  test_services_store.py  test_switcher_view.py
debts/: admin.py  exceptions.py  forms.py  models.py  selectors.py  services.py  state_machine.py  urls.py  views.py
deploy/: README.md
docs/: architecture.md  epics.md  implementation-readiness-report-2026-06-25.md  prd.md  product-brief.md  project-context.md  sprint-v0.5-redesign-plan.md  sprint-v0.5-ux-spec.md  sprint-v0.6-pagebypage-ux-spec.md  sprint-v0.7-dark-neon-redesign.md  sprint-v0.8-theming-plan.md  ux-design-specification.md
iwallet/: asgi.py  settings.py  urls.py  wsgi.py
notifications/: messages.py  models.py  selectors.py  services.py
quotes/: admin.py  models.py  selectors.py  services.py  urls.py  views.py
recurring/: admin.py  exceptions.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
reports/: charts.py  selectors.py  services.py  urls.py  views.py
scripts/: lint_no_multiline_django_comments.py
transactions/: admin.py  exceptions.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
voice/: exceptions.py  gemini_client.py  parser.py  prompts.py  schemas.py  services_async.py  urls.py  views.py
(+127 files in other folders)
